--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "itmentor-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Martiuk Oleksandr",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
