--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "itmentor-api",
   "version": "0.0.1",
-  "description": "",
+  "description": "Web-project targeted to help people",
   "author": "Martiuk Oleksandr",
   "license": "MIT",
   "scripts": {
