--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,  // TypeGraphQL
+    "experimentalDecorators": true, // TypeGraphQL
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
