--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
     "apollo-server-express": "^2.9.12",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
