--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "itmentor-api",
   "version": "1.0.0",
-  "author": "Martiuk Oleksandr <oleksandr.martiuk@gmail.com>",
+  "author": "Oleksandr Martiuk <oleksandr.martiuk@gmail.com>",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
